# ddd-kafka-python

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
app/: kafka_test_consumer.py
app/application/api/: __init__.py  lifespan.py  main.py  schemas.py
app/application/api/chats/: filters.py  handlers.py  schemas.py
app/application/api/chats/websockets/: messages.py
app/application/api/common/websockets/: managers.py
app/application/api/messages/: handlers.py  schemas.py
app/application/websockets/: messages.py
app/domain/entities/: base.py  chats.py  messages.py
app/domain/events/: chats.py
app/domain/exceptions/: base.py  chats.py  messages.py
app/domain/value_objects/: base.py  chats.py  messages.py
app/infrastructure/message_brokers/: base.py  kafka.py
app/infrastructure/repositories/: converters.py  messages.py
app/infrastructure/repositories/chats/: base.py  converters.py  memory.py  mongo.py
app/infrastructure/repositories/messages/: base.py  memory.py  mongo.py
app/logic/: init.py  mediator.py
app/logic/commands/: base.py  chats.py  messages.py
app/logic/events/: base.py  chats.py  messages.py
app/logic/exceptions/: chats.py  mediator.py  messages.py
app/logic/mediator/: base.py  command.py  event.py  query.py
app/logic/queries/: chats.py  messages.py
app/settings/: config.py
app/tests/: conftest.py  fixtures.py
app/tests/application/api/: conftest.py  test_chats.py  test_messages.py
app/tests/domain/: test_messages.py
app/tests/domain/value_objects/: test_messages.py
app/tests/logic/: test_messages.py
docker_compose/: app.yaml  messaging.yaml
